tests/negative/disallowed_spawn2.def
// Another negative unit test for a disallowed spawn.

decl bar () -> bool;

def foo () -> void
begin
    if spawn bar() then
        foo();
    fi
end
